--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <section id="home">
         <div class="container">
-             <img src="logo.png" alt="empreendedorismo" width="700" height="500" >
+             <img src="logo.png" alt="logo" width="700" height="500" >
             <h4>★  Bem-vindo à Imobiliária Edifícil!  ★</h4>
             <p>Somos uma equipe apaixonada e dedicada a transformar seus sonhos imobiliários em realidade. Nossa missão é proporcionar a melhor experiência possível na compra, venda e locação de imóveis, sempre com transparência, profissionalismo e atenção aos detalhes, 
                 continue rolando para descobrir mais sobre nós!</p>
